--- a/src/views/partials/footer.ejs
+++ b/src/views/partials/footer.ejs
@@ -15,15 +15,19 @@
 							<ul class="newsletter-follow">
 								<li>
 									<a href="https://www.facebook.com/people/La-vega-tech/100090874159804/?locale=ca_ES">
-                                        <i class="fa fa-facebook"></i></a>
+                                        <i class="fa-brands fa-facebook-f"></i></a>
 								</li>
 								<li>
 									<a href="https://www.instagram.com/lavegatechsrl/?hl=es">
-                                        <i class="fa fa-instagram"></i></a>
+                                        <i class="fa-brands fa-instagram"></i></a>
 								</li>
 								<li>
 									<a href="https://api.whatsapp.com/send/?phone=18494065652&text&type=phone_number&app_absent=0">
-										<i class="fa fa-whatsapp"></i></a>
+										<i class="fa-brands fa-whatsapp"></i></a>
+								</li>
+                                <li>
+									<a href="https://www.tiktok.com/@lavegatech">
+                                        <i class="fa-brands fa-tiktok"></i></a>
 								</li>
 							</ul>
 						</div>
@@ -48,9 +52,9 @@
                             <h3 class="footer-title">Sobre nosotros</h3>
                             <p>En <strong>La Vega Tech</strong> queremos brindarte la mejor experiencia de compra. Si tienes alguna consulta sobre nuestros productos, pedidos o cualquier otro tema, no dudes en contactarnos.</p>
                             <ul class="footer-links">
-                                <li><a href="https://maps.app.goo.gl/S85hspS9jMJGpPPt9"><i class="fa fa-map-marker"></i>Calle Libertad, La Vega 41000</a></li>
+                                <li><a href="https://maps.app.goo.gl/S85hspS9jMJGpPPt9"><i class="fa-solid fa-location-dot"></i></i>Calle Libertad, La Vega 41000</a></li>
                                 <li><a href="#"><i class="fa fa-phone"></i>+1 809-277-2371</a></li>
-                                <li><i class="fa fa-envelope-o"></i><a href="mailto:info@lavegatechgsrl.com" class="enlace">info@lavegatechgsrl.com</a></li>
+                                <li><i class="fa-solid fa-envelope"></i><a href="mailto:info@lavegatechgsrl.com" class="enlace">info@lavegatechgsrl.com</a></li>
                             </ul>
                         </div>
                     </div>
@@ -105,12 +109,8 @@
                 <div class="row">
                     <div class="col-md-12 text-center">
                         <ul class="footer-payments">
-                            <li><a href="#"><i class="fa fa-cc-visa"></i></a></li>
-                            <li><a href="#"><i class="fa fa-credit-card"></i></a></li>
-                            <li><a href="#"><i class="fa fa-cc-paypal"></i></a></li>
-                            <li><a href="#"><i class="fa fa-cc-mastercard"></i></a></li>
-                            <li><a href="#"><i class="fa fa-cc-discover"></i></a></li>
-                            <li><a href="#"><i class="fa fa-cc-amex"></i></a></li>
+                            <li><a><i class="fa-brands fa-cc-paypal"></i></a></li>
+                            <li><a><i class="fa-brands fa-cc-visa"></i></a></li>
                         </ul>
                         <span class="copyright">
                             <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
@@ -144,6 +144,7 @@
         <script src="/js/cart.js" type="module"></script>
         <script src="/js/cartPreview.js" type="module"></script>
         <script src="/js/fav.js" type="module"></script>
+        <script src="/js/formatPrice.js"></script>
 
 </body>
 </html>
