--- a/src/views/store/order.ejs
+++ b/src/views/store/order.ejs
@@ -38,45 +38,36 @@
 						</div>
 						<div class="form-group">
 							<input class="input" type="text" name="first-name" placeholder="Nombre">
+							<div class="error-text" data-error-for="first-name"></div>
 						</div>
 						<div class="form-group">
 							<input class="input" type="text" name="last-name" placeholder="Apellido">
+							<div class="error-text" data-error-for="last-name"></div>
 						</div>
 						<div class="form-group">
 							<input class="input" type="email" name="email" placeholder="ejemplo@gmail.com">
+							<div class="error-text" data-error-for="email"></div>
 						</div>
 						<div class="form-group">
 							<input class="input" type="text" name="address" placeholder="Dirección">
+							<div class="error-text" data-error-for="address"></div>
 						</div>
 						<div class="form-group">
 							<input class="input" type="text" name="city" placeholder="Ciudad">
+							<div class="error-text" data-error-for="city"></div>
 						</div>
 						<div class="form-group">
 							<input class="input" type="text" name="district" placeholder="Distrito">
+							<div class="error-text" data-error-for="district"></div>
 						</div>
 						<div class="form-group">
 							<input class="input" type="tel" name="tel" placeholder="Telefono o celular">
+							<div class="error-text" data-error-for="tel"></div>
 						</div>
 						<div class="form-group">
-							<label for="delivery-time">Horario de entrega preferido (dentro de la semana)</label>
-							<select class="input" id="delivery-time" name="delivery_time">
-								<option value="8-12">8 AM - 12 PM</option>
-								<option value="2-5">2 PM - 5 PM</option>
-							</select>
 							<p><small><strong> Nota:</strong> La fecha de entrega será en algún momento dentro de la próxima semana. 
                 			La compañía te informará sobre el día exacto de entrega. En caso de que no se realice en ese tiempo, contactenos al +1 (809) 277 2371</small></p>
 						</div>						
-						<div class="form-group">
-							<div class="input-checkbox">
-								<input type="checkbox" id="create-account">
-								<div class="caption">
-									<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor
-										incididunt.</p>
-									<input class="input" type="password" name="password"
-										placeholder="Enter Your Password">
-								</div>
-							</div>
-						</div>
 					</div>
 					<!-- /Billing Details -->
 				</div>
