--- a/src/views/store/store.ejs
+++ b/src/views/store/store.ejs
@@ -186,13 +186,13 @@
 															</a>
 															<div class="product-rating">
 															<% for (let i = 1; i <= 5; i++) { %>
-															<% if (i <= Math.floor(producto.averageRating)) { %>
-															<i class="fa fa-star"></i>
-															<% } else if (i - producto.averageRating < 1 && i > producto.averageRating) { %>
-															<i class="fa fa-star-half-o"></i>
-															<% } else { %>
-															<i class="fa fa-star-o"></i>
-															<% } %>
+                                                        	<% if (i <= Math.floor(producto.averageRating)) { %>
+                                                            <i class="fa-solid fa-star"></i>
+                                                       		<% } else if (i - producto.averageRating < 1 && i > producto.averageRating) { %>
+                                                            <i class="fa-regular fa-star-half-stroke"></i>
+                                                      		<% } else { %>
+                                                            <i class="fa-regular fa-star"></i>
+                                                       		<% } %>
 															<% } %>
 															</div>
 															<div class="product-btns">
@@ -202,7 +202,7 @@
 																	<i class="fa fa-heart-o"></i> <span class="tooltipp">Lista de deseo</span></button>
 																	
 																	<% if (producto.esMovil) { %>
-																	<button class="add-to-compare" data-id="<%= producto.id %>"><i class="fa fa-exchange"></i>
+																	<button class="add-to-compare" data-id="<%= producto.id %>"><i class="fa-solid fa-arrow-right-arrow-left"></i>
 																	<span class="tooltipp">Comparar</span></button>
 																	<% } %>
 
