--- a/src/views/store/about.ejs
+++ b/src/views/store/about.ejs
@@ -43,7 +43,7 @@
 
         <div class="columna-md-6 columna-lg-3 pb-5">
             <div class="h-100 py-5 icono-servicio sombra">
-                <div class="h1 texto-exito text-center"><i class="fa fa-exchange"></i></div>
+                <div class="h1 texto-exito text-center"><i class="fa-solid fa-arrow-right-arrow-left"></i></div>
                 <h2 class="h5 mt-4 text-center">Envío y devolución</h2>
             </div>
         </div>
